<resources>
    <string name="app_name">Aplikasi Cerita Dicoding</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Tertarik belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Mulailah di Dicoding!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini</string>
    <string name="email">Email</string>
    <string name="password">Sandi</string>
    <string name="message_login_page">Masukkan data kamu terlebih dahulu</string>
    <string name="title_login_page">Siap untuk meningkatkan skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Platform Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="name_hint">Masukkan nama Anda</string>
    <string name="pw_hint">Masukkan sandi Anda</string>
    <string name="story">Cerita</string>
    <string name="description">Deskripsi</string>
    <string name="language">Bahasa</string>
    <string name="upload">Unggah</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="yeah">Berhasil!</string>
    <string name="no">Tidak!</string>
    <string name="msg_login_s">Anda berhasil masuk!</string>
    <string name="msg_login_e">"Gagal masuk.\n""Periksa Email dan sandi Anda!"</string>
    <string name="msg_signup_s">Akun Anda berhasil dibuat!</string>
    <string name="msg_signup_e">Gagal membuat akun Anda.</string>
    <string name="positive_btn">Lanjutkan</string>
    <string name="positive_btn_e">Oke</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="pw_not_valid">Sandi harus memiliki minimal 8 karakter!</string>
    <string name="email_hint">Masukkan Email Anda</string>
    <string name="image">Gambar</string>
    <string name="no_media">Tidak ada media yang dipilih</string>
    <string name="permission_s">Izin Diberikan</string>
    <string name="permission_e">Izin Ditolak</string>
    <string name="next">Silakan masuk</string>
    <string name="Maps">Maps</string>
    <string name="show_password">Tampilkan Sandi</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="normal_type">Normal</string>
    <string name="maps">maps</string>
    <string name="lokaasi"> Lokasi</string>
    <string name="loading">Tekan lagi</string>
</resources>