<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorBackgroundFloating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenambahkanCerita.MenambahkanCeritaActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/blusky"
            app:title="@string/add_story"
            app:titleTextColor="?attr/colorOnPrimary" />
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_preview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:scaleType="center"
        android:src="@drawable/ic_place_holder"
        android:transitionName="iv_photo"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:shapeAppearanceOverlay="@style/Rounded"
        tools:src="@tools:sample/avatars"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:text="@string/camera"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_gallery"
        app:layout_constraintEnd_toEndOf="@+id/btn_upload"
        app:shapeAppearanceOverlay="@style/RoundedButton"
        android:backgroundTint="@color/blusky"
        />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/gallery"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/til_story_desc"
        app:layout_constraintStart_toStartOf="@+id/btn_upload"
        app:shapeAppearanceOverlay="@style/RoundedButton"
        android:backgroundTint="@color/blusky"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_story_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_story_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/description"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.laurens.storyappdicoding.view.auth.ButtonCustom
        android:id="@+id/btn_upload"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/blusky"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <CheckBox
        android:id="@+id/cb_addLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokaasi"
        app:layout_constraintBottom_toTopOf="@+id/btn_upload"
        app:layout_constraintStart_toStartOf="@+id/til_story_desc" />


</androidx.constraintlayout.widget.ConstraintLayout>